tests/bad/func_bad_num_args.ae
/// fail: Too many arguments, expected 2 but got 3

def foo(a: i32, b: i32): i32 {
    return a + b
}

def main() {
    foo(1, 2, 3)
}